--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
-<html lang="pt-br" class="light">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge"">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mah Rapai</title>
+    <title>Product and Graphic Design | @claygregori</title>
+    <meta
+      name="description"
+      content="Um designer de produto com experiência em produtos e marketing digital. Apaixonado por retouch e programação, sempre em busca de aprendizado constante."
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -14,6 +18,7 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
+    <video src="./assets/background-video.mp4" autoplay loop muted></video>
     <div id="container">
       <div id="profile">
         <img
@@ -23,18 +28,15 @@
         <a href="https://www.instagram.com/claygregori/" target="_blank"
           >@claygregori</a
         >
+        <p>Onde há vontade, há um caminho. Confortare et esto vir. Product Designer. Este sum me.</p>
       </div>
       <div id="switch" onclick="toggleMode()">
         <button></button>
         <span></span>
       </div>
       <ul>
-        <li><a href="">Inscreva-se no NLW</a></li>
-        <li><a href="">Baixar meu e-book</a></li>
-        <li>
-          <a href="https://www.behance.net/claygregori">Ver meu portfólio</a>
-        </li>
-        <li><a href="">Conheça o Explorer</a></li>
+        <li><a href="https://www.behance.net/claygregori">Ver portfólio</a></li>
+        <li><a href="https://wa.me/5584997098986">Entrar em contato</a></li>
       </ul>
       <div id="social-links">
         <a href="https://behance.net/claygregori" target="_blank">
@@ -47,10 +49,6 @@
           <ion-icon name="logo-instagram"></ion-icon>
         </a>
       </div>
-      <footer>
-        Feito com ❤ pela
-        <a href="https://www.rocketseat.com.br/" target="_blank">Rocketseat</a>
-      </footer>
     </div>
     <script
       type="module"
